# rustblocker

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TECHNICAL.md  build.rs  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
examples/: benchmark.rs
scripts/: .deployenv.example  deploy.sh  install.sh  mock-blocklist-stress-baseline.json  mock-deploy.sh
src/: acl.rs  acme.rs  activity.rs  api.rs  auth.rs  cloudflare.rs  config.rs  db.rs  forwarder.rs  handler.rs  lib.rs  lists.rs  main.rs  renewal.rs  stats.rs  sync.rs  tls.rs  update.rs
static/: app.js  index.html  input.css  tailwind.min.css
tests/: handler.rs  integration.rs
tests/common/: mod.rs
