[package]
name = "rustblocker"
version = "0.0.20"
edition = "2024"

[dependencies]
self_update = { version = "0.44", default-features = false, features = ["archive-tar", "compression-flate2", "reqwest", "rustls"] }
semver = "1"
hickory-server = { version = "0.26", features = ["resolver"] }
hickory-resolver = "0.26"
hickory-proto = "0.26"
futures = "0.3"
ipnet = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "cookies"], default-features = false }
actix-web = "4"
actix-rt = "2"
bcrypt = "0.16"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
parking_lot = "0.12"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
hickory-net = "0.26"

[dev-dependencies]
async-trait = "0.1"
